# code-augmentor-python

./: .gitignore  LICENSE  README.md  pyproject.toml
code_augmentor_support/: models.py  tasks.py
examples/pojo-class-generation-nosync/: build.xml
examples/pojo-class-generation-nosync/codeGenScripts/: MyFunctions.py  OtherFunctions.py  main.py  pyproject.toml
examples/pojo-class-generation-nosync/src/: Main.java  SimplePerson.java
examples/pojo-class-generation-with-sync/: build.xml
examples/pojo-class-generation-with-sync/codeGenScripts/: MyFunctions.py  main.py
tests/: basic_usage_aug_codes.json  test_code_augmentor_support.py
tests/resources/: aug_codes-00.json  aug_codes-01.json  aug_codes-02.json
